# mcp-server

./: .env.example  README.md  pyproject.toml  requirements.txt  test_all_tools.py  test_both_tools.py  test_clickhouse.py  test_client.py  test_list_buckets.py  test_tools.py  test_top_buckets.py
scripts/: run_with_ngrok.py
src/: clickhouse_config.py  s3.py  server.py  team_server.py
